--- a/Rust_tmbundle/info.plist
+++ b/Rust_tmbundle/info.plist
@@ -19,6 +19,7 @@
 		<string>23E9CFF0-E905-48A1-AF7F-4DC5497E0352</string>
 		<string>4B7CF745-DD86-4FDB-8787-3C20B5FB1414</string>
 		<string>E97E2D2A-AF7E-4E32-AEE7-034A13BFE7C2</string>
+		<string>378158C4-81B3-4D0F-9FF2-6C04E46757FA</string>
 	</array>
 	<key>uuid</key>
 	<string>06794A1F-20AC-457C-AD92-A4A8EF83EB0E</string>
